# DatadogFormattingLayer

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  deny.toml  lints.toml  rustfmt.toml
.gitea/workflows/: mainTests.yml
.github/workflows/: check.yml  release.yml  test.yml  tests (Main).yml  tests.yml
src/: datadog_ids.rs  event_sink.rs  fields.rs  formatting.rs  layer.rs  lib.rs
tests/: custom_sink.rs  layer.rs  otel.rs  simple.rs  sub.rs
tests/layer/: custom_sink.rs  main.rs  otel.rs  simple.rs
