[package]
name = "datadog-formatting-layer"
description = "A crate providing a tracing-subscriber layer for formatting events so Datadog can parse them"
authors = ["Open Schnick"]
documentation = "https://docs.rs/datadog-formatting-layer"
readme = "README.md"
homepage = "https://github.com/open-schnick/DatadogFormattingLayer"
repository = "https://github.com/open-schnick/DatadogFormattingLayer"
license = "Apache-2.0"
keywords = ["tracing", "tracing-subscriber", "layer", "datadog"]
version = "1.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.26"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
# tracing
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
# otel
tracing-opentelemetry = { version = "0.21.0", default-features = false }
opentelemetry = { version = "0.20.0", default-features = false }

[dev-dependencies]
opentelemetry-datadog = { version = "0.8.0", features = ["reqwest-client"] }
