[package]
name = "datadog-formatting-layer"
description = "A crate providing a tracing-subscriber layer for formatting events so Datadog can parse them"
authors = ["Open Schnick"]
documentation = "https://docs.rs/datadog-formatting-layer"
readme = "README.md"
homepage = "https://github.com/open-schnick/DatadogFormattingLayer"
repository = "https://github.com/open-schnick/DatadogFormattingLayer"
license = "Apache-2.0"
keywords = ["tracing", "tracing-subscriber", "layer", "datadog"]
categories = ["development-tools::debugging"]
version = "2.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# tracing
tracing = "0.1"
tracing-subscriber = "0.3"
# otel
tracing-opentelemetry = { version = "0.23.0", default-features = false }
opentelemetry = { version = "0.22.0", default-features = false }

[dev-dependencies]
opentelemetry-datadog = { version = "0.10.0", features = ["reqwest-client"] }
opentelemetry_sdk = "0.22.1"
regex = "1.10.3"
smoothy = "0.4.4"
