[package]
name = "datadog-formatting-layer"
description = "A crate providing a tracing-subscriber layer for formatting events so Datadog can parse them"
authors = ["Open Schnick"]
documentation = "https://docs.rs/datadog-formatting-layer"
readme = "README.md"
homepage = "https://github.com/open-schnick/DatadogFormattingLayer"
repository = "https://github.com/open-schnick/DatadogFormattingLayer"
license = "Apache-2.0"
keywords = ["tracing", "tracing-subscriber", "layer", "datadog"]
categories = ["development-tools::debugging"]
version = "2.2.1"
edition = "2021"

[dependencies]
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
# tracing
tracing = "0.1"
tracing-subscriber = "0.3"
# otel
tracing-opentelemetry = { version = "0.23", default-features = false }
opentelemetry = { version = "0.22", default-features = false }

[dev-dependencies]
opentelemetry-datadog = { version = "0.10", features = ["reqwest-client"] }
opentelemetry_sdk = "0.22"
regex = "1.10"
smoothy = "0.5"

[lints.rust]
missing_docs = "deny"

[lints.rustdoc]
broken_intra_doc_links = "deny"
private_intra_doc_links = "deny"
private_doc_tests = "warn"
invalid_codeblock_attributes = "deny"
invalid_html_tags = "deny"
invalid_rust_codeblocks = "deny"
bare_urls = "deny"
unescaped_backticks = "deny"
redundant_explicit_links = "deny"

[lints.clippy]
# enable more lint groups
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
# enable extra restriction lints
as_conversions = "deny"
as_underscore = "deny"
clone_on_ref_ptr = "deny"
dbg_macro = "deny"
deref_by_slicing = "deny"
else_if_without_else = "deny"
empty_drop = "deny"
empty_structs_with_brackets = "deny"
error_impl_error = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
try_err = "deny"
unimplemented = "deny"
unreachable = "deny"
unwrap_in_result = "deny"
unwrap_used = "deny"
format_push_string = "deny"
if_then_some_else_none = "deny"
indexing_slicing = "deny"
integer_division = "deny"
let_underscore_must_use = "deny"
let_underscore_untyped = "deny"
mem_forget = "deny"
missing_assert_message = "deny"
mod_module_files = "deny"
mixed_read_write_in_expression = "deny"
multiple_inherent_impl = "deny"
needless_raw_strings = "deny"
print_stderr = "deny"
print_stdout = "deny"
pub_without_shorthand = "deny"
same_name_method = "deny"
semicolon_outside_block = "deny"
shadow_reuse = "deny"
string_add = "deny"
string_slice = "deny"
string_to_string = "deny"
unnecessary_self_imports = "deny"
unneeded_field_pattern = "deny"
wildcard_enum_match_arm = "deny"
missing_errors_doc = "deny"
missing_panics_doc = "deny"
ignored_unit_patterns = "deny"
doc_markdown = "deny"
needless_pass_by_value = "deny"
redundant_pub_crate = "deny"
# allow some lints
module_name_repetitions = "allow"
tests_outside_test_module = "allow"

